// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayContentContribution Accordions should not fail if no summary tag 1`] = `
<div>
  <div
    class="sc-525da103-0 clIhqj"
  >
    <div
      class="sc-525da103-1 sXmdw"
      data-accordion-component="Accordion"
      data-testid="contrib-accordion"
    >
      <div
        id="report-ou-suspension-du-preavis"
      >
        <div
          class="sc-6ba2e448-0 wqwqk"
          data-accordion-component="AccordionItem"
        >
          <div
            class="accordion__heading"
            data-accordion-component="AccordionItemHeading"
          >
            <div
              aria-controls="accordion__panel-report-ou-suspension-du-preavis"
              aria-disabled="false"
              aria-expanded="false"
              class="sc-6ba2e448-2 dhbWmA"
              data-accordion-component="AccordionItemButton"
              id="accordion__heading-report-ou-suspension-du-preavis"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="sc-efc7f1fd-0 cFvIxv"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
              <div
                class="sc-6ba2e448-3 dhjOwJ"
              >
                <h3
                  class="sc-a53a0f9a-0 bIsTsN"
                  data-testid="contrib-accordion-0"
                  style="margin: 0px;"
                >
                  Report ou suspension du préavis
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="sc-6ba2e448-1 cDSlef"
            data-accordion-component="AccordionItemPanel"
            hidden=""
            id="accordion__panel-report-ou-suspension-du-preavis"
          >
            <div
              class="sc-8fc9f174-0 glbEDc"
            >
              <div>
                <p>
                  
        En principe, le préavis de licenciement court de date à date sans
        interruption, ni suspension. Dans certaines situations, il existe des
        exceptions qui peuvent suspendre le déroulement du préavis.
      
                </p>
                <div
                  class="sc-525da103-1 sXmdw"
                  data-accordion-component="Accordion"
                  data-testid="contrib-accordion"
                >
                  <div
                    id="conges-payes"
                  >
                    <div
                      class="sc-6ba2e448-0 wqwqk"
                      data-accordion-component="AccordionItem"
                    >
                      <div
                        class="accordion__heading"
                        data-accordion-component="AccordionItemHeading"
                      >
                        <div
                          aria-controls="accordion__panel-conges-payes"
                          aria-disabled="false"
                          aria-expanded="false"
                          class="sc-6ba2e448-2 dhbWmA"
                          data-accordion-component="AccordionItemButton"
                          id="accordion__heading-conges-payes"
                          role="button"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="sc-efc7f1fd-0 cFvIxv"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <polyline
                              points="9 18 15 12 9 6"
                            />
                          </svg>
                          <div
                            class="sc-6ba2e448-3 dhjOwJ"
                          >
                            <h4
                              class="sc-a53a0f9a-0 bIsTsN"
                              data-testid="contrib-accordion-0"
                              style="margin: 0px;"
                            >
                              Congés payés
                            </h4>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        class="sc-6ba2e448-1 cDSlef"
                        data-accordion-component="AccordionItemPanel"
                        hidden=""
                        id="accordion__panel-conges-payes"
                      >
                        <div
                          class="sc-8fc9f174-0 glbEDc"
                        >
                          <div>
                            <div
                              class="sc-525da103-1 sXmdw"
                              data-accordion-component="Accordion"
                              data-testid="contrib-accordion"
                            >
                              <div
                                id="dates-des-conges-fixees-avant-la-notification-du-licenciement"
                              >
                                <div
                                  class="sc-6ba2e448-0 wqwqk"
                                  data-accordion-component="AccordionItem"
                                >
                                  <div
                                    class="accordion__heading"
                                    data-accordion-component="AccordionItemHeading"
                                  >
                                    <div
                                      aria-controls="accordion__panel-dates-des-conges-fixees-avant-la-notification-du-licenciement"
                                      aria-disabled="false"
                                      aria-expanded="false"
                                      class="sc-6ba2e448-2 dhbWmA"
                                      data-accordion-component="AccordionItemButton"
                                      id="accordion__heading-dates-des-conges-fixees-avant-la-notification-du-licenciement"
                                      role="button"
                                      tabindex="0"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        class="sc-efc7f1fd-0 cFvIxv"
                                        fill="none"
                                        height="24"
                                        stroke="currentColor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="2"
                                        viewBox="0 0 24 24"
                                        width="24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <polyline
                                          points="9 18 15 12 9 6"
                                        />
                                      </svg>
                                      <div
                                        class="sc-6ba2e448-3 dhjOwJ"
                                      >
                                        <h5
                                          class="sc-a53a0f9a-0 bIsTsN"
                                          data-testid="contrib-accordion-0"
                                          style="margin: 0px;"
                                        >
                                          
                Dates des congés fixées avant la notification du licenciement
              
                                        </h5>
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="sc-6ba2e448-1 cDSlef"
                                    data-accordion-component="AccordionItemPanel"
                                    hidden=""
                                    id="accordion__panel-dates-des-conges-fixees-avant-la-notification-du-licenciement"
                                  >
                                    <div
                                      class="sc-8fc9f174-0 glbEDc"
                                    >
                                      <div>
                                        <p>
                                          
                Des congés payés qui interviennent pendant le préavis et qui ont
                été demandés à l'employeur avant la notification du licenciement
                suspendent le préavis. Par conséquent, le préavis est prolongé
                d'une durée équivalente à celle des congés.
              
                                        </p>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                id="dates-des-conges-fixees-apres-la-notification-du-licenciement"
                              >
                                <div
                                  class="sc-6ba2e448-0 gAQMVA"
                                  data-accordion-component="AccordionItem"
                                >
                                  <div
                                    class="accordion__heading"
                                    data-accordion-component="AccordionItemHeading"
                                  >
                                    <div
                                      aria-controls="accordion__panel-dates-des-conges-fixees-apres-la-notification-du-licenciement"
                                      aria-disabled="false"
                                      aria-expanded="false"
                                      class="sc-6ba2e448-2 dhbWmA"
                                      data-accordion-component="AccordionItemButton"
                                      id="accordion__heading-dates-des-conges-fixees-apres-la-notification-du-licenciement"
                                      role="button"
                                      tabindex="0"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        class="sc-efc7f1fd-0 cFvIxv"
                                        fill="none"
                                        height="24"
                                        stroke="currentColor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="2"
                                        viewBox="0 0 24 24"
                                        width="24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <polyline
                                          points="9 18 15 12 9 6"
                                        />
                                      </svg>
                                      <div
                                        class="sc-6ba2e448-3 dhjOwJ"
                                      >
                                        <h5
                                          class="sc-a53a0f9a-0 bIsTsN"
                                          data-testid="contrib-accordion-1"
                                          style="margin: 0px;"
                                        >
                                          
                Dates des congés fixées après la notification du licenciement
              
                                        </h5>
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="sc-6ba2e448-1 cDSlef"
                                    data-accordion-component="AccordionItemPanel"
                                    hidden=""
                                    id="accordion__panel-dates-des-conges-fixees-apres-la-notification-du-licenciement"
                                  >
                                    <div
                                      class="sc-8fc9f174-0 glbEDc"
                                    >
                                      <div>
                                        <p>
                                          
                Des congés payés qui interviennent pendant le préavis et qui ont
                été demandés à l'employeur après la notification du
                licenciement ne suspendent pas le préavis. Par conséquent, le
                préavis n'est pas prolongé d'une durée équivalente à celle des
                congés.
              
                                        </p>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                id="licenciement-notifie-pendant-les-conges-payes"
                              >
                                <div
                                  class="sc-6ba2e448-0 gAQMVA"
                                  data-accordion-component="AccordionItem"
                                >
                                  <div
                                    class="accordion__heading"
                                    data-accordion-component="AccordionItemHeading"
                                  >
                                    <div
                                      aria-controls="accordion__panel-licenciement-notifie-pendant-les-conges-payes"
                                      aria-disabled="false"
                                      aria-expanded="false"
                                      class="sc-6ba2e448-2 dhbWmA"
                                      data-accordion-component="AccordionItemButton"
                                      id="accordion__heading-licenciement-notifie-pendant-les-conges-payes"
                                      role="button"
                                      tabindex="0"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        class="sc-efc7f1fd-0 cFvIxv"
                                        fill="none"
                                        height="24"
                                        stroke="currentColor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="2"
                                        viewBox="0 0 24 24"
                                        width="24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <polyline
                                          points="9 18 15 12 9 6"
                                        />
                                      </svg>
                                      <div
                                        class="sc-6ba2e448-3 dhjOwJ"
                                      >
                                        <h5
                                          class="sc-a53a0f9a-0 bIsTsN"
                                          data-testid="contrib-accordion-2"
                                          style="margin: 0px;"
                                        >
                                          Licenciement notifié pendant les congés payés
                                        </h5>
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="sc-6ba2e448-1 cDSlef"
                                    data-accordion-component="AccordionItemPanel"
                                    hidden=""
                                    id="accordion__panel-licenciement-notifie-pendant-les-conges-payes"
                                  >
                                    <div
                                      class="sc-8fc9f174-0 glbEDc"
                                    >
                                      <div>
                                        <p>
                                          
                Dans ce cas, le préavis ne commencera qu'après les congés payés.
              
                                        </p>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Accordions should replace details element by one accordion 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <div
    class="sc-525da103-1 sXmdw"
    data-accordion-component="Accordion"
    data-testid="contrib-accordion"
  >
    <div
      id="ceci-est-un-titre"
    >
      <div
        class="sc-6ba2e448-0 wqwqk"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-ceci-est-un-titre"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-6ba2e448-2 dhbWmA"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-ceci-est-un-titre"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-efc7f1fd-0 cFvIxv"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-6ba2e448-3 dhjOwJ"
            >
              <h3
                class="sc-a53a0f9a-0 bIsTsN"
                data-testid="contrib-accordion-0"
                style="margin: 0px;"
              >
                Ceci est un titre
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-6ba2e448-1 cDSlef"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-ceci-est-un-titre"
        >
          <div
            class="sc-8fc9f174-0 glbEDc"
          >
            <div>
              <p>
                Ceci est le body
              </p>
              <br />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Accordions should replace details element within details element 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <div
    class="sc-525da103-1 sXmdw"
    data-accordion-component="Accordion"
    data-testid="contrib-accordion"
  >
    <div
      id="ceci-est-un-titre"
    >
      <div
        class="sc-6ba2e448-0 wqwqk"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-ceci-est-un-titre"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-6ba2e448-2 dhbWmA"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-ceci-est-un-titre"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-efc7f1fd-0 cFvIxv"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-6ba2e448-3 dhjOwJ"
            >
              <h3
                class="sc-a53a0f9a-0 bIsTsN"
                data-testid="contrib-accordion-0"
                style="margin: 0px;"
              >
                Ceci est un titre
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-6ba2e448-1 cDSlef"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-ceci-est-un-titre"
        >
          <div
            class="sc-8fc9f174-0 glbEDc"
          >
            <div>
              <div
                class="sc-525da103-1 sXmdw"
                data-accordion-component="Accordion"
                data-testid="contrib-accordion"
              >
                <div
                  id="ceci-est-un-sous-titre"
                >
                  <div
                    class="sc-6ba2e448-0 wqwqk"
                    data-accordion-component="AccordionItem"
                  >
                    <div
                      class="accordion__heading"
                      data-accordion-component="AccordionItemHeading"
                    >
                      <div
                        aria-controls="accordion__panel-ceci-est-un-sous-titre"
                        aria-disabled="false"
                        aria-expanded="false"
                        class="sc-6ba2e448-2 dhbWmA"
                        data-accordion-component="AccordionItemButton"
                        id="accordion__heading-ceci-est-un-sous-titre"
                        role="button"
                        tabindex="0"
                      >
                        <svg
                          aria-hidden="true"
                          class="sc-efc7f1fd-0 cFvIxv"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <polyline
                            points="9 18 15 12 9 6"
                          />
                        </svg>
                        <div
                          class="sc-6ba2e448-3 dhjOwJ"
                        >
                          <h4
                            class="sc-a53a0f9a-0 bIsTsN"
                            data-testid="contrib-accordion-0"
                            style="margin: 0px;"
                          >
                            Ceci est un sous titre
                          </h4>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="sc-6ba2e448-1 cDSlef"
                      data-accordion-component="AccordionItemPanel"
                      hidden=""
                      id="accordion__panel-ceci-est-un-sous-titre"
                    >
                      <div
                        class="sc-8fc9f174-0 glbEDc"
                      >
                        <div>
                          <p>
                            Ceci est le body
                          </p>
                          <br />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Accordions should replace multiple details element by one accordion 1`] = `
<body>
  <div>
    <div
      class="sc-525da103-0 clIhqj"
    >
      <div
        class="sc-525da103-1 sXmdw"
        data-accordion-component="Accordion"
        data-testid="contrib-accordion"
      >
        <div
          id="ceci-est-le-titre-1"
        >
          <div
            class="sc-6ba2e448-0 wqwqk"
            data-accordion-component="AccordionItem"
          >
            <div
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
            >
              <div
                aria-controls="accordion__panel-ceci-est-le-titre-1"
                aria-disabled="false"
                aria-expanded="false"
                class="sc-6ba2e448-2 dhbWmA"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-ceci-est-le-titre-1"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="sc-efc7f1fd-0 cFvIxv"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <div
                  class="sc-6ba2e448-3 dhjOwJ"
                >
                  <h3
                    class="sc-a53a0f9a-0 bIsTsN"
                    data-testid="contrib-accordion-0"
                    style="margin: 0px;"
                  >
                    Ceci est le titre 1
                  </h3>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="sc-6ba2e448-1 cDSlef"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-ceci-est-le-titre-1"
            >
              <div
                class="sc-8fc9f174-0 glbEDc"
              >
                <div>
                  <p>
                    Ceci est le body 1
                  </p>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          id="ceci-est-le-titre-2"
        >
          <div
            class="sc-6ba2e448-0 gAQMVA"
            data-accordion-component="AccordionItem"
          >
            <div
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
            >
              <div
                aria-controls="accordion__panel-ceci-est-le-titre-2"
                aria-disabled="false"
                aria-expanded="false"
                class="sc-6ba2e448-2 dhbWmA"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-ceci-est-le-titre-2"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="sc-efc7f1fd-0 cFvIxv"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <div
                  class="sc-6ba2e448-3 dhjOwJ"
                >
                  <h3
                    class="sc-a53a0f9a-0 bIsTsN"
                    data-testid="contrib-accordion-1"
                    style="margin: 0px;"
                  >
                    Ceci est le titre 2
                  </h3>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="sc-6ba2e448-1 cDSlef"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-ceci-est-le-titre-2"
            >
              <div
                class="sc-8fc9f174-0 glbEDc"
              >
                <div>
                  <p>
                    Ceci est le body 2
                  </p>
                  <br />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DisplayContentContribution Alerts should replace div with alert class in li component to Alert component 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <div>
    <p>
      Le contrat de mission (intérim) doit :
    </p>
    <ul>
      <li
        class="DisplayContentContribution__StyledLi-sc-c2bbc7a4-1 SBjaL"
      >
        <p>
          Être
          <strong>
             écrit
          </strong>
           et 
          <strong>
            rédigé
          </strong>
           en français (si conclu en France) ;
        </p>
      </li>
      <li
        class="DisplayContentContribution__StyledLi-sc-c2bbc7a4-1 SBjaL"
      >
        <p>
          Être 
          <strong>
            signé
          </strong>
          , dans un délai de 
          <strong>
            2 jours
          </strong>
           suivant la mise à disposition du salarié auprès de l'entreprise ; si l’employeur transmet le CDD au salarié après le délai de 2 jours, il s'expose au paiement d'une indemnité égale à 1 mois de salaire maximum.
        </p>
      </li>
      <li
        class="DisplayContentContribution__StyledLi-sc-c2bbc7a4-1 SBjaL"
      >
        <p>
          Être établi 
          <strong>
            en plusieurs exemplaires
          </strong>
           ; c'est-à-dire autant d'exemplaires que de parties au contrat. Chaque partie au contrat aura un exemplaire.
        </p>
        <br />
        <div
          class="sc-35146c68-0 eYIxsm"
        >
          <p>
            <strong>
              Attention : 
            </strong>
            En l’absence d’écrit, l’employeur peut être condamné à une amende de 3.750 € ou 7.500 € en cas de récidive.
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DisplayContentContribution Alerts should replace div with alert class to Alert component 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <div
    class="sc-35146c68-0 eYIxsm"
  >
    <p>
      <strong>
        Attention : 
      </strong>
      En l’absence d’écrit, l’employeur peut être condamné à une amende de 3.750 € ou 7.500 € en cas de récidive.
    </p>
  </div>
</div>
`;

exports[`DisplayContentContribution Headings should not add headings higher than h6 for accordion 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <div
    class="sc-525da103-1 sXmdw"
    data-accordion-component="Accordion"
    data-testid="contrib-accordion"
  >
    <div
      id="ceci-est-un-titre"
    >
      <div
        class="sc-6ba2e448-0 wqwqk"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-ceci-est-un-titre"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-6ba2e448-2 dhbWmA"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-ceci-est-un-titre"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-efc7f1fd-0 cFvIxv"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-6ba2e448-3 dhjOwJ"
            >
              <h6
                class="sc-a53a0f9a-0 bIsTsN"
                data-testid="contrib-accordion-0"
                style="margin: 0px;"
              >
                Ceci est un titre
              </h6>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-6ba2e448-1 cDSlef"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-ceci-est-un-titre"
        >
          <div
            class="sc-8fc9f174-0 glbEDc"
          >
            <div>
              <strong>
                Mon title
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayContentContribution Headings should not add headings higher than h6 for titles 1`] = `
<div>
  <div
    class="sc-525da103-0 clIhqj"
  >
    <h6
      class="sc-a53a0f9a-0 bIsTsN"
    >
      Mon title
    </h6>
    <strong>
      Mon title
    </strong>
  </div>
</div>
`;

exports[`DisplayContentContribution Headings should replace span with class "title" and "sub-titles" with heading 1`] = `
<div>
  <div
    class="sc-525da103-0 clIhqj"
  >
    <h2
      class="sc-a53a0f9a-0 bIsTsN"
    >
      Mon titre
    </h2>
    <h3
      class="sc-a53a0f9a-0 bIsTsN"
    >
      Mon sous titre
    </h3>
  </div>
</div>
`;

exports[`DisplayContentContribution Headings should replace span with with heading according to given title level 1`] = `
<div>
  <div
    class="sc-525da103-0 clIhqj"
  >
    <h4
      class="sc-a53a0f9a-0 bIsTsN"
    >
      Mon title
    </h4>
    <h5
      class="sc-a53a0f9a-0 bIsTsN"
    >
      Mon title
    </h5>
  </div>
</div>
`;

exports[`DisplayContentContribution Tables should add thead to table if not present and move table into a Table element 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <table
    class="sc-6d9f376d-0 iugiNe"
  >
    <thead>
      <tr>
        <th
          colspan="1"
          rowspan="1"
        />
        <th
          colspan="1"
          rowspan="1"
        >
          <p>
            Titre 1
          </p>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            Pour les 
            <strong>
              cadres
            </strong>
            , la prolongation ...
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <ul>
            <li>
              <p>
                L’employeur et le salarié donnent par écrit ou par mail.
              </p>
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DisplayContentContribution Tables should keep whitespace in specific tag 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <p>
    Ceci est un
    <strong>
       
    </strong>
    texte généré
    <strong>
       
    </strong>
    par 
    <em>
      tiptap 
    </em>
    avec des
    <em>
       
    </em>
    résidus
    <em>
       
    </em>
    de balise
  </p>
</div>
`;

exports[`DisplayContentContribution Tables should not change if thead is already present 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <table>
    <tbody>
      <tr>
        <td
          colspan="1"
          rowspan="1"
        >
          <p>
            Pour les 
            <strong>
              cadres
            </strong>
            , la prolongation ...
          </p>
        </td>
        <td
          colspan="1"
          rowspan="1"
        >
          <ul>
            <li>
              <p>
                L’employeur et le salarié donnent par écrit ou par mail.
              </p>
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DisplayContentContribution Tables should render correctly a table with multiple head lines 1`] = `
<div>
  <div
    class="sc-525da103-0 clIhqj"
  >
    <table
      class="sc-6d9f376d-0 iugiNe"
    >
      <thead>
        <tr>
          <td
            colspan="1"
            rowspan="2"
          >
            <p>
              <strong>
                Nature du contrat de mission
              </strong>
            </p>
          </td>
          <td
            colspan="2"
            rowspan="1"
          >
            <p>
              <strong>
                Durée maximale
              </strong>
            </p>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
            rowspan="1"
          >
            <p>
              <strong>
                Contrat de date à date
              </strong>
            </p>
          </td>
          <td
            colspan="1"
            rowspan="1"
          >
            <p>
              <strong>
                Contrat sans terme certain
              </strong>
            </p>
          </td>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colspan="1"
            rowspan="1"
          >
            <p>
              Remplacement d’un salarié absent ou dont le contrat de travail est suspendu
            </p>
          </td>
          <td
            colspan="1"
            rowspan="1"
          >
            <p>
              18 mois
            </p>
          </td>
          <td
            colspan="1"
            rowspan="1"
          >
            <p>
              Fin de l’absence
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DisplayContentContribution should keep whitespace in specific tag 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <p>
    Ceci est un
    <strong>
       
    </strong>
    texte généré
    <strong>
       
    </strong>
    par 
    <em>
      tiptap 
    </em>
    avec des
    <em>
       
    </em>
    résidus
    <em>
       
    </em>
    de balise
  </p>
</div>
`;

exports[`DisplayContentContribution should not remove space between strong and em tag in p tag 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <p>
    <strong>
      À noter :
    </strong>
     
    <em>
      L'échelon professionnel du salarié est habituellement mentionné 
    </em>
  </p>
</div>
`;

exports[`DisplayContentContribution should return html 1`] = `
<div
  class="sc-525da103-0 clIhqj"
>
  <p>
    hello
  </p>
</div>
`;
